@@ -1,4 +1,4 @@
 module blogbitix.http {
-    requires jdk.incubator.httpclient;
+    requires java.net.http;
 }
 
